--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -8,7 +8,7 @@
       <strong>{{ loop.index }}. {{ item.label }}</strong>
       <p>{{ item.description }}</p>
       {% if item.enabled %}
-        <a class="btn" href="{{ url_for('howto') if item.id=='howto' else (url_for('info') if item.id=='info' else '#') }}">Abrir</a>
+        <a class="btn" href="{{ url_for(item.id) }}">Abrir</a>
       {% else %}
         <span class="btn" style="background:#444">Deshabilitado</span>
         <small style="margin-left:1rem;color:#94a3b8">Deshabilitado por seguridad en la interfaz web</small>
